WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235103
[:has() pseudo-class] Collect invalidation selectors for child invalidation
https://bugs.webkit.org/show_bug.cgi?id=235103
Summary
[:has() pseudo-class] Collect invalidation selectors for child invalidation
Antti Koivisto
Reported
2022-01-12 02:31:47 PST
Collect selectors we can use to test if :has status actually changed before invalidating.
Attachments
Patch
(20.23 KB, patch)
2022-01-12 02:39 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(19.99 KB, patch)
2022-01-12 05:10 PST
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2022-01-12 02:39:15 PST
Created
attachment 448920
[details]
Patch
Antti Koivisto
Comment 2
2022-01-12 05:10:57 PST
Created
attachment 448934
[details]
Patch
EWS
Comment 3
2022-01-12 23:32:58 PST
Committed
r287973
(
246002@main
): <
https://commits.webkit.org/246002@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448934
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-01-12 23:33:17 PST
<
rdar://problem/87533906
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug